crates/iroha_derive/tests/config_base_ui_fail/invalid_attrs_struct.stderr
error: struct-level `#[config]` attributes are not supported
 --> tests/config_base_ui_fail/invalid_attrs_struct.rs:4:1
  |
4 | #[config(whatever)] // not supported on structs
  | ^^^^^^^^^^^^^^^^^^^
